minor refactor, and add new step

--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -1,5 +1,9 @@
-welcome.message=Привет, новый пользователь, возможно, вы хотите иметь лучшего бота в мире ?????
+welcome.message=Привет, новый пользователь, кажется, вы хотите иметь лучшего бота в мире ????? Пожалуйста, введите ваше имя.
 enter.name.prompt=Введите имя
 enter.name.unsuccess=Похоже ты шутишь, введи нормальное имя
 enter.email.prompt=Ведите Email
 enter.email.unsuccess=Давай снова
+enter.phone.prompt=Пожалуста, введите контактный номер телефона
+enter.phone.unsuccess=Давай снова
+enter.order.describe.prompt=Можете ли вы написать краткое описание своего бота
+enter.order.describe.unsuccess=Похоже ты шутишь, введи нормальное имя
