--- a/makethisbotbot/src/main/resources/log4j.properties
+++ b/makethisbotbot/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
-llog4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+#TODO change it
 log4j.appender.file.File=E:/java/makethisbotlog
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
