refactor to add ability add step with keybord

--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -7,3 +7,4 @@ enter.phone.prompt=Пожалуста, введите контактный номер телефона
 enter.phone.unsuccess=Давай снова
 enter.order.describe.prompt=Можете ли вы написать краткое описание своего бота
 enter.order.describe.unsuccess=Похоже ты шутишь, введи нормальное имя
+test=test
