change logger config and conversation logic

--- a/makethisbotbot/src/main/resources/log4j.properties
+++ b/makethisbotbot/src/main/resources/log4j.properties
@@ -1,7 +1,21 @@
+log4j.rootLogger=ERROR, A1
+log4j.appender.A1=org.apache.log4j.RollingFileAppender
+log4j.appender.A1.File=E:/java/makethisbotlog/rot.log
+log4j.appender.A1.MaxFileSize=10MB
+log4j.appender.A1.MaxBackupIndex=10
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.logger.com.makethisbot.bot=INFO, file, stdout
+log4j.additivity.com.makethisbot.bot = false
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-#TODO change it
-log4j.appender.file.File=E:/java/makethisbotlog
+log4j.appender.file.File=E:/java/makethisbotlog/main.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
