--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -1,3 +1,4 @@
+type.order.fun=Развлечения
 welcome.message=Привет, новый пользователь, кажется, вы хотите иметь лучшего бота в мире ????? Пожалуйста, введите ваше имя.
 enter.name.prompt=Введите имя
 enter.name.unsuccess=Похоже ты шутишь, введи нормальное имя
@@ -7,4 +8,11 @@ enter.phone.prompt=Пожалуста, введите контактный номер телефона
 enter.phone.unsuccess=Давай снова
 enter.order.describe.prompt=Можете ли вы написать краткое описание своего бота
 enter.order.describe.unsuccess=Похоже ты шутишь, введи нормальное имя
-test=test
+enter.order.type.prompt=Здесь вы можете увидеть типы телеграм ботов. Пожалуйста, выберите тот, который лучше всего подходит вашему. Для справки воспользуйтесь командой /help_order_type
+enter.order.type.unsuccess=Пожалуйста, используйте только те типы, которые расположены ниже
+type.order.bussines=Бизнес
+type.order.game=Игры
+type.order.oganizer=Личный помошник
+##
+command.help.order.type=bussines - for bussines goal\u000agame - text game\u000afun - telegram bot for fun
+
