added localization to menu

--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -15,4 +15,14 @@ enter.order.type.organizer=Личный помошник
 enter.order.type.fun=Развлечения
 command.help.order.type=bussines - for bussines goal\u000agame - text game\u000afun - telegram bot for fun
 enter.order.type.default=Другое
-
+menu.root=Корневой пункт меню \u0B27.
+menu.root.button=Корневой пункт
+menu.faq=Пожалуйста, выберите часто задаваемый вопрос, который вам интересен.
+menu.faq.button=FAQ
+menu.faq.question1.button=Что такое Telegram?
+menu.faq.question1=Telegram - бесплатный кросс-платформенный мессенджер для смартфонов и других устройств, который позволяет вам обмениваться текстовыми сообщениями и мультимедийными файлами.
+menu.change.data.button=Изменение контактных данных
+menu.change.data=Выберите, что вы хотите изменить
+menu.show.order.status.button=Статус заказа
+menu.back.button=Назад
+menu.error=Я не понимаю ваш язык\ud83d\ude1e, Пожалуйста\ud83d\ude4f используйте существующие кнопки.
