--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -26,3 +26,5 @@ menu.change.data=Выберите, что вы хотите изменить
 menu.show.order.status.button=Статус заказа
 menu.back.button=Назад
 menu.error=Я не понимаю ваш язык\ud83d\ude1e, Пожалуйста\ud83d\ude4f используйте существующие кнопки.
+menu.faq.question2=Количество активных пользователей составляет более чем 150 миллионов и постоянно растет.
+menu.faq.question2.button=Много ли людей им пользуются?
