added order status menu item

--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -28,3 +28,9 @@ menu.back.button=Назад
 menu.error=Я не понимаю ваш язык\ud83d\ude1e, Пожалуйста\ud83d\ude4f используйте существующие кнопки.
 menu.faq.question2=Количество активных пользователей составляет более чем 150 миллионов и постоянно растет.
 menu.faq.question2.button=Много ли людей им пользуются?
+status.message=В настоящее время ваш заказ в статусе:
+status.canceled=Отменен
+status.queue=В Очереди
+status.assessment=Оценка
+status.customer.review=Обзор клиента
+status.done=Выполнено
