added date step

--- a/makethisbotbot/src/main/resources/l18n/ru.properties
+++ b/makethisbotbot/src/main/resources/l18n/ru.properties
@@ -1,11 +1,11 @@
 welcome.message=Привет, новый пользователь, кажется, вы хотите иметь лучшего бота в мире ????? Пожалуйста, введите ваше имя.
-enter.name.prompt=Введите имя
-enter.name.unsuccess=Похоже ты шутишь, введи нормальное имя
-enter.email.prompt=Ведите Email
-enter.email.unsuccess=Давай снова
-enter.phone.prompt=Пожалуста, введите контактный номер телефона
-enter.phone.unsuccess=Давай снова
-enter.order.describe.prompt=Можете ли вы написать краткое описание своего бота
+enter.name.prompt=Введите свое имя, пожалуйста !!!!!
+enter.name.unsuccess=Извините ?, данные недействительны, повторите попытку.
+enter.email.prompt=Ведите Email, пожалуйста ?!!!!!
+enter.email.unsuccess=Извините ?, данные недействительны, повторите попытку.
+enter.phone.prompt=Пожалуста, введите контактный номер телефона ?
+enter.phone.unsuccess=Извините ?, данные недействительны, повторите попытку.
+enter.order.describe.prompt=Можете ли вы написать краткое описание своего бота??
 enter.order.describe.unsuccess=Похоже ты шутишь, введи нормальное имя
 enter.order.type.prompt=Здесь вы можете увидеть типы телеграм ботов. Пожалуйста, выберите тот, который лучше всего подходит вашему. Для справки воспользуйтесь командой /help_order_type
 enter.order.type.unsuccess=Пожалуйста, используйте только те типы, которые расположены ниже
@@ -15,7 +15,7 @@ enter.order.type.organizer=Личный помошник
 enter.order.type.fun=Развлечения
 command.help.order.type=bussines - for bussines goal\u000agame - text game\u000afun - telegram bot for fun
 enter.order.type.default=Другое
-menu.root=Корневой пункт меню \u0B27.
+menu.root=Корневой пункт меню ?.
 menu.root.button=Корневой пункт
 menu.faq=Пожалуйста, выберите часто задаваемый вопрос, который вам интересен.
 menu.faq.button=FAQ
@@ -34,3 +34,16 @@ status.queue=В Очереди
 status.assessment=Оценка
 status.customer.review=Обзор клиента
 status.done=Выполнено
+menu.change.data.name=Имя
+menu.change.data.phone=Phone
+menu.change.data.email=Email
+menu.change.data.prompt=Пожалуйста, введите новые данные:
+menu.change.data.successful=Данные сохраненны
+menu.show.user.data=Показать данные
+menu.show.user.data.name=Имя:
+menu.show.user.data.phone=\nНомер телефона:
+menu.show.user.data.email=\nEmail:
+enter.order.due.date.prompt=Пожалуйста, введите предположительную дату выполнения заказа ?
+enter.order.due.date.unsuccess=Введите правильный формат даты(dd/mm/yyyy, dd,mmm,yyyy, dd:mm:yyyy). Также имейте в виду, что дата должна быть не менее 3 дней с текущей даты.
+menu.show.user.data.due.date=\nДата выполнения заказа:
+menu.change.data.due.date=Дата выполнения заказа
